# enterprise-rag

./: .dockerignore  .env.example  .gitignore  .mise.toml  AGENTS.md  Dockerfile  PLAN.md  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260713_0001_m1_schema.py  20260713_0002_m2_indexing.py  20260713_0003_m3_retrieval.py  20260715_0004_m4_generation.py  20260716_0005_m5_observability.py  20260717_0006_semantic_embeddings.py
apps/api/enterprise_rag_api/: __init__.py  dependencies.py  error_handlers.py  main.py  middleware.py
apps/worker/enterprise_rag_worker/: __init__.py  broker.py  dispatcher.py  enqueue_pending.py  run_job.py  tasks.py
data/eval/: README.md  generation.jsonl  retrieval.jsonl
data/eval/reports/: m3-controlled-synthetic-v1.json  m4-controlled-grounding-v1.json  m5-load-50000.json  m6-scifact-bge-small-en-v1.5.json
docs/: architecture.md  demo.md  operations.md  repository-history.md  troubleshooting.md
docs/adr/: 0001-m1-service-boundaries.md  0002-reliable-document-indexing.md  0003-hybrid-retrieval-and-evaluation.md  0004-grounded-streaming-generation.md  0005-observability-recovery-and-evaluation-boundary.md  0006-separate-development-and-semantic-vectors.md
scripts/: cleanup_orphans.py  demo.py  evaluate_generation.py  evaluate_public_retrieval.py  evaluate_retrieval.py  load_test.py  provider_smoke.py  recovery_test.py  smoke_test.py
tests/: conftest.py  m2_helpers.py
tests/fault/: test_worker_recovery.py
tests/integration/: test_document_indexing.py  test_generation.py  test_migrations.py  test_models.py  test_readiness.py  test_retrieval.py
tests/security/: test_document_upload_security.py  test_retrieval_security.py  test_tenant_access.py
tests/unit/: test_document_processing.py  test_document_service.py  test_generation_core.py  test_generation_dataset.py  test_load_test.py  test_project_delivery.py  test_public_retrieval_evaluation.py  test_retrieval_core.py  test_retrieval_dataset.py  test_security.py  test_stream_disconnect.py  test_system_api.py  test_worker_entrypoints.py
(+7 files in other folders)
